# LinkKVM

./: .gitignore  CHANGELOG.md  CHANGELOG_zh.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
scripts/: build.bat  build.sh  local-build.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  target  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/config/: schema.rs
src-tauri/src/hid/: ch9329.rs  keymap.rs  mod.rs  serial.rs
src-tauri/src/video/: capture.rs  mod.rs  stream.rs
src/components/: LogPanel.tsx  NoSignalPattern.tsx  PermissionDialog.tsx  QuickActions.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx  VideoCanvas.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useAnalytics.ts  useConfig.ts  useKeyboard.ts  useMouse.ts
src/stores/: eventLog.ts
src/styles/: global.css
src/utils/: coordinates.ts  keymap.ts
