[package]
name = "linkkvm"
version = "0.1.0"
edition = "2021"
description = "LinkKVM - Open source IP-KVM client"
license = "MIT"
repository = "https://github.com/user/linkkvm"
readme = "../README.md"

[lib]
name = "linkkvm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-aptabase = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

